<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        android:layout_marginLeft="30dp"
        />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <TextView
        android:id="@+id/temp_feels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/temp_feels"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />


    <TextView
        android:id="@+id/temp_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/low_temp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/temp_feels"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/temp_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_temp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/temp_low"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/temp_high"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/forecastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forecast"
        android:layout_marginBottom="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>