<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp">


    <ImageView
        android:id="@+id/forecast_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="340dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/sun_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/forecast_date"
        app:layout_constraintLeft_toRightOf="@id/forecast_condition_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecast_low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="Low: 20"
        android:textSize="15sp"
        app:layout_constraintWidth="true"
        app:layout_constraintStart_toEndOf="@+id/forecast_high_temp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecast_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/forecast_temp"
        app:layout_constraintStart_toEndOf="@+id/forecast_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecast_sunset"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="44dp"
        android:text="Sunset: 30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_sunrise" />

    <TextView
        android:id="@+id/forecast_high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="High 20"
        app:layout_constraintStart_toEndOf="@+id/forecast_date"
        app:layout_constraintTop_toBottomOf="@+id/forecast_temp" />

    <TextView
        android:id="@+id/forecast_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forecast_sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>